# JobHunter

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_jobs_and_execution_logs.py
app/: __init__.py  celery_app.py  cli.py  config.py  db.py  deduplicator.py  exceptions.py  models.py  notifier.py  scoring.py  tasks.py
app/api/: __init__.py  main.py  schemas.py
app/api/routes/: executions.py  jobs.py
app/exporters/: __init__.py  csv_exporter.py  json_exporter.py  markdown_exporter.py
app/observability/: __init__.py  logging.py  metrics.py  tracing.py
app/parsers/: __init__.py  contract_parser.py  location_parser.py  salary_parser.py  seniority_parser.py  stack_parser.py
app/repositories/: __init__.py  execution_logs_repository.py  jobs_repository.py
app/scrapers/: __init__.py  base.py  github_backendbr.py  linkedin.py  programathor.py
app/services/: __init__.py  notification_service.py  pipeline_service.py  scoring_service.py  scraping_service.py
docs/: architecture.md  deployment.md  environment.md  roadmap.md  scraping.md  testing.md
scripts/: init_db.sql
tests/: __init__.py  conftest.py  factories.py
tests/fixtures/: github_issue_python_backend.json  linkedin_search_card.html  programathor_job_page.html
tests/integration/: test_database_repository.py  test_pipeline.py
tests/unit/: test_base_scraper.py  test_config.py  test_deduplicator.py  test_github_backendbr_scraper.py  test_linkedin_scraper.py  test_notifier.py  test_parsers.py  test_programathor_scraper.py  test_scoring.py  test_services.py  test_tasks.py
