[project]
name = "jobhunter-bot"
version = "1.0.0"
description = "Daily job scraping, scoring, persistence and alerting bot for Python backend roles."
requires-python = ">=3.12"
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: tests that exercise database or service integration",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "app/celery_app.py",
    "app/db.py",
    "app/tasks.py",
    "app/api/*",
    "app/cli.py",
    "app/exporters/*",
    "app/observability/*",
    "app/api/main.py",
    "app/scrapers/github_backendbr.py",
    "app/scrapers/linkedin.py",
    "app/scrapers/programathor.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
plugins = []
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
disable_error_code = ["import-untyped"]
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true
